	commands. Now Debian special *.orig extension is handled correctly.
	(CygbuildCommandMain::repackage-all,repackage-bin): Remove check
	commands.
	(CygbuildRunShell): Removed 'cd'. Run in current directory.
	(CygbuildSetLDPATHpython): More careful LD_LIBRARY_PATH and
	$LD_RUN_PATH treatment.
	(CygbuildCmdInstallCheckDirStructure): Added /etc check

2007-09-19  Jari Aalto  <jari.aalto@cante.net>

	* etc/template/install.tar.options.tmp: Mention
	--exclude=cygbuild-no-docdir-install

	* bin/cygbuild.pl: (HELP::OPTIONAL EXTERNAL FILES::diff.options):
	Clarify paragraphs.
	(HELP::OPTIONAL EXTERNAL FILES::install.tar.options): Document
	--exclude=cygbuild-no-docdir-install

	* etc/template/Makefile.tmp (clean): Added comments next
	to targets.
	(ETCDIR): Remove extra $.

	* bin/cygbuild.sh: (CygbuildFileReadOptionsMaybe):
	Shorten displayed message.
	(CygbuildCmdBuildMain): Shorten displayed message.
	(CygbuildInstallPackageDocs): Support new option
	'cygbuild-no-docdir-install'.
	(CygbuildCmdInstallCheckCygpatchDirectory): Ignore *.orig* files.
	(CygbuildMatchBashPatternList): Moved to primitives.
	(CygbuildIsMakefileCplusplus): Change \t to [[:space:]].
	(CygbuildMakefilePrefixCheck): Change \t to [[:space:]].
	(CygbuildCmdInstallCheckCygpatchDirectory): Change \t to [[:space:]].
	(MakefileUsesRedirect): Change \t to [[:space:]].
	(CygbuildInstallPackageDocs): Add option --dereference to tar,
	so that documentation is copied 'as is'.
	(CygbuildCmdInstallCheckSetupHint): Convert PKG into safe regexp
	before testing words from 'ldesc:'.
	(CygbuildPatchApplyMaybe): Use grep option --fixed-strings to
	match already applied patches. Fixed $continue variable name
	which caused reapplying already applied patch.
	(CygbuildIsCplusplusPackage): New.
	(CygbuildMakefileName): Fix "$@" handling.
	(CygbuildDefineGlobalCompile): Fix C++ code check and definition
	of 'ccache g++'.
	(CygbuildDefineGlobalMain): Remove  call to