@@ -14,6 +14,7 @@
 	(CygbuildSetLDPATHpython): More careful LD_LIBRARY_PATH and
 	$LD_RUN_PATH treatment.
 	(CygbuildCmdInstallCheckDirStructure): Added /etc check
+	(CygbuildShellEnvironenment): Define DESTDIR and prefix.
 
 2007-09-19  Jari Aalto  <jari.aalto@cante.net>
 
